Fixed spacing for project cards, changed the background for project section to suitable color and also got rid of few lorem ipsum texts for projects and skills. Updated banner text loop, and added more skills to slide sections.

--- a/src/App.css
+++ b/src/App.css
@@ -510,7 +510,7 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
   padding: 130px 0;
   /* z-index: -1; */
   position: relative;
-  background-color: grey;
+  background-color: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
   /* width: 100vw;
   height: 100vh; */
   display: flex;
@@ -529,7 +529,7 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
   line-height: 1.5em;
   margin: 14px auto 30px auto;
   text-align: center;
-  width: 56%;
+  max-width: 95%;
 }
 .project .nav.nav-pills {
   width: 72%;
@@ -591,7 +591,7 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
   justify-content: center;
   align-items: center;
   margin-top: 2rem;
-  margin-right: 2rem;
+
   border-radius: 18px;
   overflow: hidden;
 }
@@ -604,8 +604,7 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
 }
 
 .card-img {
-  width: 100%;
-  height: 210px;
+  height: 230px;
   background-size: cover;
   background-position: center;
 }
@@ -620,20 +619,10 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
   color: #ccc;
 }
 
-/* .days-ago {
-  font-size: 0.7rem;
-  color: #ccc;
-} */
-
 .proj-title {
   font-size: 1.8rem;
   color: #fff;
   margin: 0.5rem 0;
-}
-
-.proj-description {
-  color: #aaa;
-  font-size: 1rem;
 }
 
 .proj-actions {
@@ -720,6 +709,14 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
   text-align: center;
   width: 76%;
   flex-wrap: wrap;
+}
+
+/* Images carousel */
+.carousel-image-section {
+  margin-top: 5rem;
+  width: 100%;
+  padding: inherit;
+  position: relative;
 }
 
 /* Github button container */
